force-app/main/default/objects/WorkOrder/fields/PM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Due_Date__c</fullName>
    <description>Target date on which this preventive-maintenance visit is due.</description>
    <label>PM Due Date</label>
    <type>Date</type>
</CustomField>