force-app/main/default/objects/WorkOrder/fields/PM_Generation_Key__c.field-meta.xml
<CustomField>
    <fullName>PM_Generation_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Idempotency key formed from Asset, Entitlement, and PM due date.</description>
    <externalId>true</externalId>
    <label>PM Generation Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>