force-app/main/default/objects/WorkOrder/fields/System_Generated_PM__c.field-meta.xml
<CustomField>
    <fullName>System_Generated_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this preventive-maintenance Work Order was generated automatically.</description>
    <label>System Generated PM</label>
    <type>Checkbox</type>
</CustomField>